welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:6: error: Unmatched closing brace '}' ignored here
 }
 ^